# cpp_data_algo

./: .clang-format  CMakeLists.txt  CPM.cmake  README.md
containers/: array.hpp  forward_list.hpp  inc.hpp  range.hpp  static_vector.hpp  suoc_map.hpp  vector.hpp  view.hpp
containers2/: vector_alt.hpp
inc/: array.hpp  box_ptr.hpp  cont.hpp  forward_list.hpp  iterator.hpp  logger.hpp  rc_ptr.hpp  span.hpp  vector.hpp
pointers/: box_ptr.hpp  rc_ptr.hpp  ref_ptr.hpp
utilities/: iterator.hpp  logger.hpp  option.hpp  pair.hpp  utility.hpp
